--- a/MyPortfolio/projects.html
+++ b/MyPortfolio/projects.html
@@ -38,12 +38,12 @@
             <div class="main__content">
                 <h1>Carbon Footprint Calculator</h1>
                 <p>Built a project that allows users to calculate their household carbon footprint based on a variety of household items.</p>
-                <button class="main__btn"><a href="https://github.com/ale2k2/Capp.com" download>Check it Out</a></button>
+                <button class="main__btn"><a href="bootstrap-project.zip" download>Check it Out</a></button>
                 <br>
                 <br>
                 <h1>Pantry2Me</h1>
                 <p>Built a project that allows users to find local food pantries nearby.</p>
-                <button class="main__btn"><a href="https://github.com/ale2k2/Pantry2Me" download>Check it Out</a></button>
+                <button class="main__btn"><a href="Pantry2Me.zip" download>Check it Out</a></button>
             </div>
             <div class="main__img--container">
                 <img src="images/pic1.svg" alt="pic" id="main__img">
